# tldr

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_enhanced_system.py  test_transcript.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml
docs/: AI_ENHANCEMENT_PLAN.md  NEXT_ENHANCEMENT_PHASE.md  README.md
docs/architecture/: README.md
docs/architecture/decisions/: 001-tech-stack.md
docs/handoffs/: 2025-09-04-1037-phase1-models-complete.md
docs/planning/: implementation-plan.md  phase3-alternatives.md  phase3-mvp-plan.md  phase3b-hybrid-ai-services-plan.md
src/: __init__.py  main.py
src/api/: routes.py
src/api/v1/endpoints/: health.py  providers.py  summaries.py  transcripts.py
src/core/: config.py  exceptions.py  logging.py  middleware.py
src/integrations/: __init__.py
src/models/: __init__.py  action_item.py  base.py  decision.py  risk.py  transcript.py  user_story.py
src/services/: __init__.py  base.py  llm_provider_service.py  mock_summarization_service.py  ollama_service.py  processing_service.py  prompts.py  summarization_factory.py  text_analysis_utils.py
src/static/: test.html
src/summarization/: __init__.py
src/transcription/: __init__.py
tests/: conftest.py  test_main.py
tests/integration/: test_ai_services.py
tests/integration/api/: test_api_flow.py
tests/unit/: test_exceptions.py  test_models_action_item.py  test_models_base.py  test_models_decision.py  test_models_transcript.py
tests/unit/api/v1/: __init__.py
tests/unit/api/v1/endpoints/: test_health.py  test_summaries.py  test_transcripts.py
tests/utils/: model_helpers.py
