[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldr"
version = "0.1.0"
description = "AI-powered meeting transcript summarization tool"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Connor", email = "connor@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Office/Business",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "assemblyai>=0.20.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-json-logger>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
    "types-aiofiles>=23.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tldr"
Repository = "https://github.com/yourusername/tldr"
Issues = "https://github.com/yourusername/tldr/issues"
Documentation = "https://github.com/yourusername/tldr#readme"

[project.scripts]
tldr = "src.main:main"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
# Ruff configuration - handles both linting and formatting
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    "venv", 
    ".git",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
# Start minimal, add complexity only when needed
select = [
    "E",    # pycodestyle errors (critical)
    "F",    # pyflakes (catches real bugs)
    "I",    # isort (import ordering)
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
# Ruff formatter with sensible defaults
quote-style = "double"
indent-style = "space"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true
strict_equality = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "assemblyai.*",
    "langchain.*",
    "langchain_openai.*",
    "aiofiles.*",
]
ignore_missing_imports = true

# TODO: Fix remaining type issues in future iteration
[[tool.mypy.overrides]]
module = [
    "src.core.logging",
    "src.models.transcript", 
    "src.core.exceptions",
    "src.api.v1.endpoints.summaries",
]
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/main.py",  # Entry point, tested via integration
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]